--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:rxy8UivvYVH7w9V/bdwMvfxWYChnMRtbV/itOT7V5EI=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,9 +11,14 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=studiofoto
 DB_USERNAME=root
 DB_PASSWORD=
+
+MIDTRANS_MERCHANT_ID=G954182234
+MIDTRANS_CLIENT_KEY=SB-Mid-client-bR43xU6nPZ9CsmbM
+MIDTRANS_SERVER_KEY=SB-Mid-server-YtDvB2n-c4pQYn9BYp34BLsS
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
